force-app/main/default/objects/Distributor_Stock__c/Distributor_Stock__c.object-meta.xml
<CustomObject>
    <label>Distributor Stock</label>
    <pluralLabel>Distributor Stock</pluralLabel>
    <nameField>
        <label>Stock Entry Number</label>
        <displayFormat>DST-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Distributor inventory snapshot tracking opening/closing stock, receipts, and sales for SFA distribution management</description>
</CustomObject>