force-app/main/default/objects/Distributor_Stock__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distributor Stock</relationshipLabel>
    <relationshipName>Distributor_Stock</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>