force-app/main/default/objects/Distributor_Stock__c/fields/Closing_Stock__c.field-meta.xml
<CustomField>
    <fullName>Closing_Stock__c</fullName>
    <label>Closing Stock</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>