force-app/main/default/objects/Distributor_Stock__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product_Extension__c</referenceTo>
    <relationshipLabel>Distributor Stock</relationshipLabel>
    <relationshipName>Distributor_Stock</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>