force-app/main/default/objects/Distributor_Stock__c/fields/Product_Ext__c.field-meta.xml
<CustomField>
    <fullName>Product_Ext__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product_Extension__c</referenceTo>
    <relationshipLabel>Distributor Stock (Ext)</relationshipLabel>
    <relationshipName>Distributor_Stock_Ext</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>