force-app/main/default/objects/Distributor_Stock__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <label>Visit</label>
    <type>Lookup</type>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Distributor Stock Entries</relationshipLabel>
    <relationshipName>Distributor_Stock_Entries</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Visit during which this stock entry was captured</description>
</CustomField>