force-app/main/default/objects/Distributor_Stock__c/validationRules/Quantities_Non_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantities_Non_Negative</fullName>
    <active>true</active>
    <description>Ensures that all stock quantity fields are non-negative.</description>
    <errorConditionFormula>Opening_Stock__c &lt; 0 OR Received_Qty__c &lt; 0 OR Sold_Qty__c &lt; 0 OR Damaged_Qty__c &lt; 0 OR Closing_Stock__c &lt; 0</errorConditionFormula>
    <errorMessage>Stock quantities cannot be negative.</errorMessage>
</ValidationRule>