force-app/main/default/objects/Distributor_Stock__c/validationRules/Sold_Qty_Not_Exceed_Available.validationRule-meta.xml
<ValidationRule>
    <fullName>Sold_Qty_Not_Exceed_Available</fullName>
    <active>true</active>
    <description>Ensures Sold Quantity does not exceed the available stock (Opening Stock + Received Qty).</description>
    <errorConditionFormula>Sold_Qty__c &gt; (Opening_Stock__c + Received_Qty__c)</errorConditionFormula>
    <errorDisplayField>Sold_Qty__c</errorDisplayField>
    <errorMessage>Sold Quantity cannot exceed available stock (Opening Stock + Received Qty).</errorMessage>
</ValidationRule>