force-app/main/default/objects/Distributor_Stock__c/listViews/Current_Stock.listView-meta.xml
<ListView>
    <fullName>Current_Stock</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product_Ext__c</columns>
    <columns>Closing_Stock__c</columns>
    <columns>Batch_No__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Stock_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Current__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Current Stock</label>
</ListView>