force-app/main/default/objects/Distributor_Stock__c/listViews/Low_Stock_Items.listView-meta.xml
<ListView>
    <fullName>Low_Stock_Items</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product_Ext__c</columns>
    <columns>Closing_Stock__c</columns>
    <columns>Batch_No__c</columns>
    <columns>Expiry_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Current__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Closing_Stock__c</field>
        <operation>lessThan</operation>
        <value>10</value>
    </filters>
    <label>Low Stock Items</label>
</ListView>